New development model for dev services in extensions