@@ -1,6 +1,5 @@
 package io.quarkus.it.kafka.devservices.profiles;
 
-import java.util.Collections;
 import java.util.Map;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
@@ -11,7 +10,9 @@ public class DevServicesCustomPortProfile implements QuarkusTestProfile {
 
     @Override
     public Map<String, String> getConfigOverrides() {
-        return Collections.singletonMap("quarkus.kafka.devservices.port", PORT);
+        return Map.of(
+                "quarkus.kafka.devservices.provider", "kafka-native",
+                "quarkus.kafka.devservices.port", PORT);
     }
 
     @Override
